<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="submit">submit</string>
    <string name="customer_name">Customer Name</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_work">Add Work</string>
    <string name="work_date">Work Date</string>
    <string name="work_completed">Name of Work Completed</string>
    <string name="_12_12_12">12:12:12</string>
    <string name="total_time">Total Time</string>
    <string name="total_amount">Total Amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="remaining_amount">Remaining Amount</string>
</resources>
