<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    tools:targetApi="lollipop">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:elevation="9dp"
                android:src="@drawable/sigin_boy_img"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:elevation="0dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/signin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:background="@color/colorAccent"
                            android:fontFamily="@font/calibri"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/signin"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/signup"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:background="@drawable/bordershape"
                            android:fontFamily="@font/calibri"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:text="@string/signup"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linearLayout1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/signin_signup_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/calibri"
                            android:text="@string/sign_in"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawableStart="@drawable/ic_call_black_24dp"
                                android:drawableLeft="@drawable/ic_call_black_24dp"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/mobile_number"
                                android:inputType="number"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            app:passwordToggleEnabled="true">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawableStart="@drawable/ic_lock_light_blue_24dp"
                                android:drawableLeft="@drawable/ic_lock_light_blue_24dp"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                app:passwordToggleEnabled="true">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/confirm_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:drawableStart="@drawable/ic_lock_light_blue_24dp"
                                    android:drawableLeft="@drawable/ic_lock_light_blue_24dp"
                                    android:drawablePadding="16dp"
                                    android:fontFamily="@font/calibri"
                                    android:hint="@string/confirm_password"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:textColor="@android:color/black"
                                    android:textSize="16sp" />
                            </com.google.android.material.textfield.TextInputLayout>
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/signin_signup_btn"
                            android:layout_width="210dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="24dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/buttonshape"
                            android:drawableStart="@drawable/ic_touch_app_white_24dp"
                            android:drawableLeft="@drawable/ic_touch_app_white_24dp"
                            android:fontFamily="@font/calibri"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/sign_in"
                            android:textAllCaps="false"
                            android:textColor="#ffffff"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/forgot_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="32dp"
                            android:fontFamily="@font/calibri"
                            android:text="@string/forgot_your_password"
                            android:textAlignment="center"
                            android:textColor="#4f4f4f"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>