<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:targetApi="lollipop">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="0dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:elevation="9dp"
                android:src="@drawable/sigin_boy_img"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="50">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/user_name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/customer_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="12">

                    <androidx.appcompat.widget.AppCompatEditText
android:id="@+id/user_mobile_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_btn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:drawableStart="@drawable/ic_touch_app_white_24dp"
                android:drawableLeft="@drawable/ic_touch_app_white_24dp"
                android:fontFamily="@font/calibri"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.core.widget.NestedScrollView>
